// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render cost 1`] = `
"repeat(list, cb, key)   — explicit key
┌─────────────┬─────────┬────────────┬─────────────┬─────────────┬──────────┐
│ operation   │ rebuilt │ hole reads │ text writes │ attr writes │ node ops │
├─────────────┼─────────┼────────────┼─────────────┼─────────────┼──────────┤
│ create 1k   │ 1000    │ 2000       │ 2000        │ 2000        │ 1000     │
│ update 10th │ 100     │ 200        │ 100         │ 0           │ 0        │
│ select      │ 1       │ 2          │ 0           │ 1           │ 0        │
│ swap        │ 0       │ 0          │ 0           │ 0           │ 4        │
│ remove 1    │ 0       │ 0          │ 0           │ 0           │ 1        │
│ clear       │ 0       │ 0          │ 0           │ 0           │ 999      │
└─────────────┴─────────┴────────────┴─────────────┴─────────────┴──────────┘"
`;

exports[`render cost 2`] = `
"repeat(list, cb)         — auto identity key
┌─────────────┬─────────┬────────────┬─────────────┬─────────────┬──────────┐
│ operation   │ rebuilt │ hole reads │ text writes │ attr writes │ node ops │
├─────────────┼─────────┼────────────┼─────────────┼─────────────┼──────────┤
│ create 1k   │ 1000    │ 2000       │ 2000        │ 2000        │ 1000     │
│ update 10th │ 100     │ 200        │ 100         │ 0           │ 0        │
│ select      │ 1       │ 2          │ 0           │ 1           │ 0        │
│ swap        │ 0       │ 0          │ 0           │ 0           │ 4        │
│ remove 1    │ 0       │ 0          │ 0           │ 0           │ 1        │
│ clear       │ 0       │ 0          │ 0           │ 0           │ 999      │
└─────────────┴─────────┴────────────┴─────────────┴─────────────┴──────────┘"
`;
